--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.0.0",
     "react-is": "^18.2.0",
     "react-native": "0.69.3",
+    "react-native-country-codes-picker": "^2.2.0",
     "react-native-element-dropdown": "^2.1.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.5.0",
@@ -54,6 +55,7 @@
     "@types/react-native": "^0.69.3",
     "@types/react-native-vector-icons": "^6.4.11",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "^26.6.3",
