--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "is-arrayish": "^0.3.2",
     "moment": "^2.29.4",
     "native-base": "^3.4.12",
     "react": "18.0.0",
     "react-is": "^18.2.0",
     "react-native": "0.69.3",
+    "react-native-confirmation-code-field": "^7.3.1",
     "react-native-country-codes-picker": "^2.2.0",
     "react-native-element-dropdown": "^2.1.0",
     "react-native-elements": "^3.4.2",
