--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
+    "rn-round-checkbox": "^1.0.0",
     "styled-components": "^5.3.5",
     "yup": "^0.32.11"
   },
